# rMatch

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/filmfest/recalls/: sub-01.csv  sub-02.csv  sub-07.csv  sub-09.csv  sub-11.csv  sub-12.csv  sub-13.csv  sub-14.csv  sub-17.csv  sub-19.csv  sub-20.csv
data/filmfest/transcripts/: JL_transcript.csv  KM_transcript.csv  RC_transcript.csv
data/nfrd/human_ratings/: P1_pieman_dhruva.csv  human_mi_P1_pieman  human_mi_P2_pieman
data/nfrd/pieman/: P100_pieman.txt  P103_pieman.txt  P104_pieman.txt  P105_pieman.txt  P106_pieman.txt  P107_pieman.txt  P10_pieman.txt  P110_pieman.txt  P111_pieman.txt  P112_pieman.txt  P115_pieman.txt  P14_pieman.txt  P15_pieman.txt  P17_pieman.txt  P18_pieman.txt  P19_pieman.txt  P1_pieman.txt  P20_pieman.txt  P22_pieman.txt  P23_pieman.txt  P24_pieman.txt  P25_pieman.txt  P26_pieman.txt  P29_pieman.txt  P31_pieman.txt  P32_pieman.txt  P36_pieman.txt  P37_pieman.txt  P38_pieman.txt  P3_pieman.txt  P43_pieman.txt  P44_pieman.txt  P45_pieman.txt  P47_pieman.txt  P49_pieman.txt  P4_pieman.txt  P53_pieman.txt  P55_pieman.txt  P57_pieman.txt  P59_pieman.txt  (+26 more)
data/nfrd/transcripts/: baseball.txt
data/nfrd/transcripts/text/: eyespy.txt  pieman.txt
data/prompts/: rate_incontext_prompt.txt  rate_incontext_prompt_extended.txt
data/stories-and-recalls/baseball/ratings/: lda_hmm.json
data/stories-and-recalls/baseball/transcripts/: lda_hmm.txt  sentences.txt  text.txt
data/stories-and-recalls/eyespy/ratings/: lda_hmm.json
data/stories-and-recalls/eyespy/transcripts/: lda_hmm.txt  sentences.txt  text.txt
data/stories-and-recalls/oregon/ratings/: lda_hmm.json
data/stories-and-recalls/oregon/transcripts/: lda_hmm.txt  sentences.txt
imports/: import_cyoa.py  import_nfrd.py
misc/: causality_rating_instructions.txt  human_mi_rating_instructions.txt  recall_quality_rating_instructions.txt
scripts/: ccn_dataset_stats.py  ccn_example_matrices.py  ccn_plots_pearsonr.py  create_benchmark.py  fix_comparison_matrices_cyoa.py  fix_comparison_matrices_memsearch.py  huggingface_segment_recall.py  import_filmfest.py  import_memsearch.py  import_nfrd.py  prepare_human_causality_file.py  prepare_human_mi.py  prepare_human_quality_file.py  prepare_human_recall_quality_file.py  process_flashfiction.py  segmenter_vllm.py  test_vllm_seg.py  vllm_segmentation.py
scripts/2026-ccn/: ccn_example_matrices.py  ccn_plots.py  ccn_plots_pearsonr.py
src/recall_matrix/: __init__.py  ccn_dataset_stats.py  ccn_plots.py  evaluate_binary.py  evaluate_recall_matrix.py  inspect_eval_binary_results.py  load.py  main.py  mutual_information.py  mutual_information_recall_matrix.py  playground.py  plot_eval_binary_results.py  plot_single_sub.py  prep_human_mi.py  rate_binary.py  rate_incontext.py  repeat_reliability.py  reranker_recall_matrix.py  reranker_recall_matrix_2.py  run_coverage.py  test_mutual_information_method.py  test_recall_matrix.py  test_recall_two_stage.py  unit_tests.py  utils.py
src/recall_matrix/raters/: __init__.py  rater.py  rater_anthropic.py  rater_huggingface.py  rater_openai.py  rater_reranker.py
src/recall_matrix/recall_matrix/: llm_recall.py  reranker.py  test_anthropic.py  test_openai.py
src/rmatch/: __init__.py  evaluate.py  evaluate_binary.py  inspect_eval_binary_results.py  load.py  load_benchmark.py  match.py  match_inputs.py  matching.py  plot_eval_binary_results.py  plot_single_sub.py  prompt.py  rate_binary.py  segment.py  utils.py
src/rmatch/causal_rater/: __init__.py  causal_rater_cuda.py
src/rmatch/matchers/: __init__.py  factory.py  matcher.py  matcher_anthropic.py  matcher_base.py  matcher_cuda.py  matcher_huggingface.py  matcher_mac.py  matcher_mlx.py  matcher_openai.py  matcher_reranker.py  matcher_vllm.py
src/rmatch/raters/: __init__.py  rater.py  rater_anthropic.py  rater_huggingface.py  rater_huggingface_batched.py  rater_openai.py  rater_reranker.py
src/rmatch/segmenters/: __init__.py  segmenter_cuda.py  segmenter_vllm.py  temp.py
tests/: conftest.py  test_cli.py  test_evaluate.py  test_match_io.py  test_matchers_api_keys.py  test_matchers_match.py  test_prompt.py  test_utils.py
(+991 files in other folders)
