[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recall-matrix"
version = "0.1.0"
description = ""
authors = [{ name = "Gabriel Kressin Palacios", email = "gkressi1@jhu.edu" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "ruff>=0.14.0,<0.15",
    "pandas>=2.3.3,<3",
    "numpy>=2.3.3,<3",
    "pre-commit>=4.3.0,<5",
    "openpyxl>=3.1.5,<4",
    "matplotlib>=3.10.7,<4",
    "tqdm>=4.67.1,<5",
    "transformers<4.57.0",
    "python-dotenv>=1.1.1,<2",
    "rich>=14.2.0,<15",
    "accelerate>=1.10.1,<2",
    "sentence-transformers>=5.1.1,<6",
    "spacy>=3.8.7,<4",
    "einops>=0.8.1",
    "scikit-learn>=1.7.2",
    "nltk>=3.9.2",
    "chardet>=5.2.0",
    "openai>=2.15.0",
    "flash-attn>=2.8.3",
    "bitsandbytes>=0.49.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]

[tool.uv.extra-build-dependencies]
recall-matrix = ["hatchling", "editables"]
flash-attn = ["torch", "setuptools", "ninja", "packaging"]
vllm = ["torch", "setuptools", "ninja", "packaging", "cmake"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
xformers = { index = "pytorch-cu128" }
vllm = { index = "pytorch-cu128" }

[tool.uv]
no-build-isolation-package = ["flash-attn", "vllm", "xformers"]
