[project]
name = "rMatch"
version = "0.4.2"
description = "Match recall segments with story segments."
authors = [{ name = "Gabriel Kressin Palacios", email = "gkressi1@jhu.edu" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "torch>=2.7",
    "torchvision>=0.22",
    "ruff>=0.14.0,<0.15",
    "pandas>=2.3.3,<3",
    "numpy>=2.1,<3",
    "pre-commit>=4.3.0,<5",
    "openpyxl>=3.1.5,<4",
    "matplotlib>=3.10.7,<4",
    "tqdm>=4.67.1,<5",
    "transformers>5.0",
    "python-dotenv>=1.1.1,<2",
    "rich>=14.2.0,<15",
    "accelerate>=1.10.1,<2",
    "sentence-transformers>=5.1.1,<6",
    "einops>=0.8.1",
    "nltk>=3.9.2",
    "chardet>=5.2.0",
    "openai>=2.15.0",
    "anthropic>=0.84.0",
    "tiktoken>=0.12.0",
    "krippendorff>=0.8.2",
    "plotly>=6.6.0",
    "kaleido>=1.2.0",
    "huggingface>=0.0.1",
    "bitsandbytes>=0.45.0",
]

[project.optional-dependencies]
mac = ["mlx-vlm>=0.4.4"]
cuda = ["vllm>=0.19.1"]
flash = ["flash-attn"]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
]

[project.scripts]
rmatch = "rmatch.matching:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests that invoke subprocesses",
]

[tool.coverage.run]
source = ["src/rmatch"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "E501"]
ignore = ["F401"]
